namespace Domain.Enums
{
    public enum WorkPlaceType 
    {
        Office,
        MeetingRoom,
        ConferenceHall,
        BreakRoom,
        Kitchen,
        Restroom,
        StorageRoom,
        ParkingLot,
        OutdoorArea,
        ReceptionArea
    }
}
